--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "del": "^2.2.2",
     "gulp": "^3.9.1",
     "gulp-clean-css": "^3.0.4",
-    "gulp-htmlmin": "^3.0.0"
+    "gulp-htmlmin": "^3.0.0",
+    "gulp-sass": "^3.1.0"
   }
 }
